# notifier/api/integration_grpc.pb.go
@@ -20,11 +20,13 @@ import (
 const _ = grpc.SupportPackageIsVersion9
 
 const (
-	IntegrationController_Create_FullMethodName = "/integration.IntegrationController/Create"
-	IntegrationController_Read_FullMethodName   = "/integration.IntegrationController/Read"
-	IntegrationController_Update_FullMethodName = "/integration.IntegrationController/Update"
-	IntegrationController_Delete_FullMethodName = "/integration.IntegrationController/Delete"
-	IntegrationController_List_FullMethodName   = "/integration.IntegrationController/List"
+	IntegrationController_Create_FullMethodName              = "/integration.IntegrationController/Create"
+	IntegrationController_Read_FullMethodName                = "/integration.IntegrationController/Read"
+	IntegrationController_Update_FullMethodName              = "/integration.IntegrationController/Update"
+	IntegrationController_Delete_FullMethodName              = "/integration.IntegrationController/Delete"
+	IntegrationController_List_FullMethodName                = "/integration.IntegrationController/List"
+	IntegrationController_TestAI_FullMethodName              = "/integration.IntegrationController/TestAI"
+	IntegrationController_ExplainRuntimeEvent_FullMethodName = "/integration.IntegrationController/ExplainRuntimeEvent"
 )
 
 // IntegrationControllerClient is the client API for IntegrationController service.
@@ -36,6 +38,8 @@ type IntegrationControllerClient interface {
 	Update(ctx context.Context, in *Integration, opts ...grpc.CallOption) (*emptypb.Empty, error)
 	Delete(ctx context.Context, in *DeleteIntegrationReq, opts ...grpc.CallOption) (*emptypb.Empty, error)
 	List(ctx context.Context, in *ListIntegrationReq, opts ...grpc.CallOption) (*ListIntegrationResp, error)
+	TestAI(ctx context.Context, in *TestAIReq, opts ...grpc.CallOption) (*emptypb.Empty, error)
+	ExplainRuntimeEvent(ctx context.Context, in *ExplainRuntimeEventReq, opts ...grpc.CallOption) (*ExplainRuntimeEventResp, error)
 }
 
 type integrationControllerClient struct {
@@ -96,6 +100,26 @@ func (c *integrationControllerClient) List(ctx context.Context, in *ListIntegrat
 	return out, nil
 }
 
+func (c *integrationControllerClient) TestAI(ctx context.Context, in *TestAIReq, opts ...grpc.CallOption) (*emptypb.Empty, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(emptypb.Empty)
+	err := c.cc.Invoke(ctx, IntegrationController_TestAI_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *integrationControllerClient) ExplainRuntimeEvent(ctx context.Context, in *ExplainRuntimeEventReq, opts ...grpc.CallOption) (*ExplainRuntimeEventResp, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ExplainRuntimeEventResp)
+	err := c.cc.Invoke(ctx, IntegrationController_ExplainRuntimeEvent_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // IntegrationControllerServer is the server API for IntegrationController service.
 // All implementations must embed UnimplementedIntegrationControllerServer
 // for forward compatibility.
@@ -105,6 +129,8 @@ type IntegrationControllerServer interface {
 	Update(context.Context, *Integration) (*emptypb.Empty, error)
 	Delete(context.Context, *DeleteIntegrationReq) (*emptypb.Empty, error)
 	List(context.Context, *ListIntegrationReq) (*ListIntegrationResp, error)
+	TestAI(context.Context, *TestAIReq) (*emptypb.Empty, error)
+	ExplainRuntimeEvent(context.Context, *ExplainRuntimeEventReq) (*ExplainRuntimeEventResp, error)
 	mustEmbedUnimplementedIntegrationControllerServer()
 }
 
@@ -129,6 +155,12 @@ func (UnimplementedIntegrationControllerServer) Delete(context.Context, *DeleteI
 }
 func (UnimplementedIntegrationControllerServer) List(context.Context, *ListIntegrationReq) (*ListIntegrationResp, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method List not implemented")
+}
+func (UnimplementedIntegrationControllerServer) TestAI(context.Context, *TestAIReq) (*emptypb.Empty, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method TestAI not implemented")
+}
+func (UnimplementedIntegrationControllerServer) ExplainRuntimeEvent(context.Context, *ExplainRuntimeEventReq) (*ExplainRuntimeEventResp, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method ExplainRuntimeEvent not implemented")
 }
 func (UnimplementedIntegrationControllerServer) mustEmbedUnimplementedIntegrationControllerServer() {}
 func (UnimplementedIntegrationControllerServer) testEmbeddedByValue()                               {}
@@ -241,6 +273,42 @@ func _IntegrationController_List_Handler(srv interface{}, ctx context.Context, d
 	return interceptor(ctx, in, info, handler)
 }
 
+func _IntegrationController_TestAI_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(TestAIReq)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(IntegrationControllerServer).TestAI(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: IntegrationController_TestAI_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(IntegrationControllerServer).TestAI(ctx, req.(*TestAIReq))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _IntegrationController_ExplainRuntimeEvent_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ExplainRuntimeEventReq)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(IntegrationControllerServer).ExplainRuntimeEvent(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: IntegrationController_ExplainRuntimeEvent_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(IntegrationControllerServer).ExplainRuntimeEvent(ctx, req.(*ExplainRuntimeEventReq))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // IntegrationController_ServiceDesc is the grpc.ServiceDesc for IntegrationController service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -267,6 +335,14 @@ var IntegrationController_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "List",
 			Handler:    _IntegrationController_List_Handler,
+		},
+		{
+			MethodName: "TestAI",
+			Handler:    _IntegrationController_TestAI_Handler,
+		},
+		{
+			MethodName: "ExplainRuntimeEvent",
+			Handler:    _IntegrationController_ExplainRuntimeEvent_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
